# webkit-seed

./: CMakeLists.txt
src/: webkit-seed-extension.c  webkit-seed.vala
test/: index.html
